--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT:4000
+PORT=4000
 DB_CONNECTION=mongodb+srv://sa:Caracol100*@cluster0.yes41.mongodb.net/Project_Zero
 SECRET_JWT_SEED=BK@#MC45_WD
